# NettyTest

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/testsocket/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_processing.c
app/src/main/java/com/example/testsocket/: MainActivity.java  MainView.java
app/src/main/java/com/example/testsocket/jni/: AudioProcessing.java
app/src/main/java/com/example/testsocket/message/: BaseCommand.java  BaseMessage.java  CommandType.java  GetDeviceIdRequestMessage.java  GetVersionRequestMessage.java  GetVersionResponseMessage.java  MessageType.java
app/src/main/java/com/example/testsocket/message/request/: DelFileCommand.java  FileCountCommand.java  FileListCommand.java  GetFileCountRequestMessage.java  GetFileListRequestMessage.java  GetIdRequestMessage.java  IdCommand.java  (+10 more)
app/src/main/java/com/example/testsocket/netty/: ChannelInitClient.java  DataHandlerAdapter.java  HeartBeatListener.java  MessageHandler.java  MessageType.java  NettyClient.java  NettyConstants.java  SmartCarDecoder.java  SmartCarProtocol.java
app/src/main/java/com/example/testsocket/utils/: BBCUtil.java  FileDownload.java  FileDownloadOld.java  FileTransfer.java  ImageGenerator.java
app/src/main/java/com/example/testsocket/view/: SpectrumView.java
app/src/main/res/layout/: activity_main.xml  activity_main_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
